# my_bot

./: CMakeLists.txt  README.md  package.xml
config/: map.rviz  nav2_params.yaml
description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py  launch_sim.launch_copy.py  navigation_launch.py  rsp.launch.py  slam_launch.py
maps/: map_1739525906.pgm  map_1739525906.yaml  map_normal.yaml  map_serial.data
my_bot/: CMakeLists.txt
my_bot/config/: drive_bot.rviz  view_bot.rviz
my_bot/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  test.xacro
my_bot/launch/: launch_sim.launch.py  rsp.launch.py  script_launch.py  slam_launch.py
my_bot/maps/: map_normal.pgm
my_bot/scripts/: myprogram  navigation.py  oled.py  test.c  test.wsd  test1.c
my_bot/worlds/: obstacle.world
scripts/: class.wsd  contour_frontier_explorer.py  exploration_goal_publisher.py  lidar.py  map.py  nav2.py  nav2_copy.py  navigation.py  obstacle_detct.py  obstacle_detector.py  obstacle_laser_detector.py  orient_bot.py  rl_ex.py  test1.wsd  tf_test.py  yaw_printer.py
swarm_turtle/: CMakeLists.txt  package.xml
swarm_turtle/launch/: turtle_launch.py
swarm_turtle/scripts/: CMakeLists.txt  TurtleData.msg  curser.py  (+7 more)
ur3/: CMakeLists.txt  package.xml
ur3/launch/: gazebo.launch.py  rsp_launch.py  ur_launch.py
ur3/scripts/: controller.py
ur3/ur_description/: arctos_urdf.xacro  robot_arm_urdf.urdf  robot_arm_urdf.xacro  ur3.rviz
ur3/worlds/: empty_world.launch.xml
worlds/: wall.world  wall_obstacle.world
