<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="brijrajraolji@gmail.com">dell</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros2_package type="rviz2_plugin" />
  <rviz2>
    <resource_path>/home/dell/ros2_ws/src/ur3/ur_description/meshes</resource_path>
  </rviz2>
  </export>
</package>
